update to qotm-ws

--- a/kubernetes/qotm-deployment.yaml
+++ b/kubernetes/qotm-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: qotm
-        image: datawire/qotm:1.2
+        image: datawire/qotm-ws:1
         imagePullPolicy: Always
         ports:
         - name: http-api
