--- a/service.yaml
+++ b/service.yaml
@@ -1,1 +1,15 @@
 name: qotm
+
+profiles:
+  stable:
+    endpoint: /hello
+    max_memory: 0.5G
+    max_cpu: 0.5
+  canary:
+    endpoint: /hello
+    weight: 10.0 # percentage of traffic to route to this class of deployment
+    max_memory: 0.5G
+    max_cpu: 0.5G
+  default:
+    max_memory: 0.25G
+    max_cpu: 0.25
