--- a/kubernetes/qotm-service.yaml
+++ b/kubernetes/qotm-service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: qotm
+  name: qotm-ws
 spec:
   type: NodePort
   selector:
-    app: qotm
+    app: qotm-ws
   ports:
   - port: 80
     targetPort: http-api
