add trailing slash to endpoint

--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,11 @@ name: qotm-ws
 
 profiles:
   stable:
-    endpoint: /hello
+    endpoint: /hello/
     max_memory: 0.5G
     max_cpu: 0.5
   canary:
-    endpoint: /hello
+    endpoint: /hello/
     weight: 10.0 # percentage of traffic to route to this class of deployment
     max_memory: 0.5G
     max_cpu: 0.5G
